/**
 * @fileoverview gRPC æœå‹™ç®¡ç†å™¨
 * 
 * çµ±ä¸€ç®¡ç†æ‰€æœ‰ gRPC å®¢æˆ¶ç«¯é€£æ¥
 * 
 * @module gRPC/Clients/ServiceManager
 * @version 1.0.0
 * @author AIOT Team
 */

import { RbacGrpcClient } from './rbacClient.js';
import { FeSettingGrpcClient } from './feSettingClient.js';

/**
 * gRPC æœå‹™ç®¡ç†å™¨é¡åˆ¥
 * è² è²¬åˆå§‹åŒ–å’Œç®¡ç†æ‰€æœ‰å¤–éƒ¨æœå‹™çš„ gRPC å®¢æˆ¶ç«¯é€£æ¥
 */
export class GrpcServiceManager {
  private static instance: GrpcServiceManager;
  
  // gRPC å®¢æˆ¶ç«¯å¯¦ä¾‹
  private rbacClient: RbacGrpcClient;
  private feSettingClient: FeSettingGrpcClient;
  
  private isInitialized: boolean = false;

  /**
   * ç§æœ‰å»ºæ§‹å­ - å¯¦æ–½å–®ä¾‹æ¨¡å¼
   */
  private constructor() {
    this.rbacClient = new RbacGrpcClient();
    this.feSettingClient = new FeSettingGrpcClient();
  }

  /**
   * ç²å–æœå‹™ç®¡ç†å™¨å¯¦ä¾‹ (å–®ä¾‹)
   */
  public static getInstance(): GrpcServiceManager {
    if (!GrpcServiceManager.instance) {
      GrpcServiceManager.instance = new GrpcServiceManager();
    }
    return GrpcServiceManager.instance;
  }

  /**
   * åˆå§‹åŒ–æ‰€æœ‰ gRPC å®¢æˆ¶ç«¯é€£æ¥
   */
  public async initialize(): Promise<void> {
    if (this.isInitialized) {
      console.log('ğŸ”„ gRPC Service Manager å·²ç¶“åˆå§‹åŒ–');
      return;
    }

    try {
      console.log('ğŸš€ åˆå§‹åŒ– gRPC Service Manager...');
      
      // é€™è£¡å¯ä»¥æ·»åŠ å¥åº·æª¢æŸ¥æˆ–é€£æ¥æ¸¬è©¦
      console.log('âœ… RBAC gRPC Client å·²æº–å‚™å°±ç·’');
      console.log('âœ… FeSetting gRPC Client å·²æº–å‚™å°±ç·’');
      
      this.isInitialized = true;
      console.log('ğŸ‰ gRPC Service Manager åˆå§‹åŒ–å®Œæˆ');
      
    } catch (error) {
      console.error('âŒ gRPC Service Manager åˆå§‹åŒ–å¤±æ•—:', error);
      throw error;
    }
  }

  /**
   * ç²å– RBAC gRPC å®¢æˆ¶ç«¯
   */
  public getRbacClient(): RbacGrpcClient {
    if (!this.isInitialized) {
      throw new Error('Service Manager å°šæœªåˆå§‹åŒ–ï¼Œè«‹å…ˆèª¿ç”¨ initialize()');
    }
    return this.rbacClient;
  }

  /**
   * ç²å– FeSetting gRPC å®¢æˆ¶ç«¯
   */
  public getFeSettingClient(): FeSettingGrpcClient {
    if (!this.isInitialized) {
      throw new Error('Service Manager å°šæœªåˆå§‹åŒ–ï¼Œè«‹å…ˆèª¿ç”¨ initialize()');
    }
    return this.feSettingClient;
  }

  /**
   * ç²å–ä½¿ç”¨è€…è³‡è¨Šå’Œåå¥½è¨­å®š (ç´”è³‡æ–™ç²å–ï¼Œä¸åšæ¬Šé™æª¢æŸ¥)
   */
  public async getUserInfoAndPreferences(userId: number): Promise<{
    user?: any;
    preferences?: any;
    success: boolean;
  }> {
    try {
      // 1. ç²å–ä½¿ç”¨è€…è³‡è¨Š
      const userResponse = await this.rbacClient.getUserById(userId);
      if (!userResponse || !userResponse.success) {
        return {
          success: false
        };
      }

      // 2. ç²å–ä½¿ç”¨è€…çš„ç„¡äººæ©Ÿåå¥½è¨­å®š
      let preferences = null;
      try {
        preferences = await this.feSettingClient.getUserDronePreferences(userId);
      } catch (error) {
        console.warn('âš ï¸ ç„¡æ³•ç²å–ä½¿ç”¨è€…ç„¡äººæ©Ÿåå¥½è¨­å®š:', error);
      }

      return {
        success: true,
        user: userResponse.data,
        preferences: preferences
      };

    } catch (error) {
      console.error('âŒ ç²å–ä½¿ç”¨è€…è³‡è¨Šæ™‚ç™¼ç”ŸéŒ¯èª¤:', error);
      return {
        success: false
      };
    }
  }

  /**
   * è¨˜éŒ„ä½¿ç”¨è€…æ“ä½œåå¥½ (ä¾¿æ·æ–¹æ³•)
   */
  public async recordUserPreference(userId: number, operation: string, value: any): Promise<void> {
    try {
      await this.feSettingClient.setUserDronePreference(
        userId,
        `operation_${operation}`,
        JSON.stringify(value)
      );
      
      console.log(`âœ… å·²è¨˜éŒ„ä½¿ç”¨è€… ${userId} çš„æ“ä½œåå¥½: ${operation}`);
    } catch (error) {
      console.error(`âŒ è¨˜éŒ„ä½¿ç”¨è€…åå¥½å¤±æ•—:`, error);
      // ä¸æ‹‹å‡ºéŒ¯èª¤ï¼Œå› ç‚ºé€™ä¸æ˜¯é—œéµåŠŸèƒ½
    }
  }

  /**
   * å¥åº·æª¢æŸ¥ - æª¢æŸ¥æ‰€æœ‰å®¢æˆ¶ç«¯é€£æ¥ç‹€æ…‹
   */
  public async healthCheck(): Promise<{
    status: 'healthy' | 'degraded' | 'unhealthy';
    services: {
      rbac: boolean;
      feSetting: boolean;
    };
  }> {
    const services = {
      rbac: false,
      feSetting: false
    };

    try {
      // æ¸¬è©¦ RBAC æœå‹™
      await this.rbacClient.getUsers({ page: 1, limit: 1 });
      services.rbac = true;
    } catch (error) {
      console.warn('âš ï¸ RBAC æœå‹™å¥åº·æª¢æŸ¥å¤±æ•—:', error);
    }

    try {
      // æ¸¬è©¦ FeSetting æœå‹™ - å‡è¨­æœ‰ä¸€å€‹ç°¡å–®çš„æ¸¬è©¦æ–¹æ³•
      services.feSetting = true; // æš«æ™‚è¨­ç‚º trueï¼Œå¯¦éš›æ‡‰è©²æœ‰æ¸¬è©¦æ–¹æ³•
    } catch (error) {
      console.warn('âš ï¸ FeSetting æœå‹™å¥åº·æª¢æŸ¥å¤±æ•—:', error);
    }

    const healthyServices = Object.values(services).filter(status => status).length;
    const totalServices = Object.keys(services).length;

    let status: 'healthy' | 'degraded' | 'unhealthy';
    if (healthyServices === totalServices) {
      status = 'healthy';
    } else if (healthyServices > 0) {
      status = 'degraded';
    } else {
      status = 'unhealthy';
    }

    return { status, services };
  }

  /**
   * é—œé–‰æ‰€æœ‰ gRPC å®¢æˆ¶ç«¯é€£æ¥
   */
  public close(): void {
    if (this.rbacClient) {
      this.rbacClient.close();
    }
    
    if (this.feSettingClient) {
      this.feSettingClient.close();
    }
    
    this.isInitialized = false;
    console.log('ğŸ”Œ æ‰€æœ‰ gRPC å®¢æˆ¶ç«¯é€£æ¥å·²é—œé–‰');
  }
}

/**
 * åŒ¯å‡ºå–®ä¾‹å¯¦ä¾‹
 */
export const grpcServiceManager = GrpcServiceManager.getInstance();